<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_HOMSStepper" Id="{59acacf2-49b3-454e-979e-299117a50a5f}">
    <Declaration><![CDATA[TYPE ST_HOMSStepper :
STRUCT

	(* Controls *)
	/////////////////////////////////
	xEnable	:	BOOL;
	xReset	:	BOOL;
	//External motor interlock, overrides axis enable
	i_xMotorInterlock	:	BOOL;
	//Motion Profile
	fVelocity     : REAL;
	fAcceleration : REAL;
	fDeceleration : REAL ;
	//Tweak Requests
	bTwkFwd : BOOL;
	bTwkBwd : BOOL;
	rTweak  : REAL;
	//Absolute Value Request
	rReqAbsolute : REAL:= 0.0;
	//Pitch stepper dmov range (urad)
	rStepperDmovRange	:	REAL := 20;
	(* Status *)
	//Axis Status
	stStatus : ST_StepperStatus;
	bDone : BOOL;
	bBusy : BOOL;
	
	
	(* IO *)
	//CoE Stuff
	///////////////////////////////
	stCoE	:	ST_ElmoGDCBellCoEParams;
	
	//Drive inputs
	/////////////////////////////
	diInputs	AT %I*	:	DINT;
	//Drive current
	iDriveCurrent	AT %I*	:	INT;	
	(* Axis motor *)
	stAxis	:	AXIS_REF;
	//Limit switches
	xHiLS	:	BOOL;
	xLoLS	:	BOOL;



END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>